<resources>
    <string name="app_name">Rođendanski podsjetnik</string>
    <string name="danas">DANAS</string>
    <string name="nadolaze_i">NADOLAZEĆI</string>
    <string name="ime_prezime_ima_ro_endan_i_10_drugih">Ime Prezime ima rođendan i 10 drugih</string>
    <string name="vi_e">VIŠE</string>
    <string name="ime_prezime_20_5">Ime Prezime (20.5)</string>
    <string name="svi">SVI</string>
    <string name="dodaj">DODAJ</string>
    <string name="ro_endani_danas_28_9">Rođendani danas (28.9.)</string>
    <string name="povratak">POVRATAK</string>
    <string name="spremljeni_ro_endani">Spremljeni rođendani</string>
    <string name="dodavanje_ro_endana">Dodavanje rođendana</string>
    <string name="ime_i_prezime">IME I PREZIME</string>
    <string name="unesite_naziv_osobe">Unesite naziv osobe</string>
    <string name="datum_ro_enja">DATUM ROĐENJA</string>
    <string name="izaberite_datum_ro_enja">Izaberite datum rođenja</string>
    <string name="dodajte_komentar">DODAJTE KOMENTAR</string>
    <string name="unesite_komentar_neobavezno">Unesite komentar (neobavezno)</string>
    <string name="komentar_ovo_je_komentar">Komentar: ovo je komentar</string>
    <string name="datum_rodenja_01_01_2020">Datum rodenja: 01.01.2020.</string>
    <string name="obrisi">obrisi</string>
</resources>