<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina_vise"
    tools:context=".InformacijeActivity">

    <TextView
        android:id="@+id/naziv"
        android:layout_width="358dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ime_i_prezime"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/datum_rodenja_tekst"
        android:layout_width="358dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/datum_rodenja_01_01_2020"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/komentar_cijeli_tekst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naziv" />

    <TextView
        android:id="@+id/komentar_cijeli_tekst"
        android:layout_width="358dp"
        android:layout_height="430dp"
        android:layout_marginTop="165dp"
        android:gravity="center|center_horizontal|top"
        android:text="@string/komentar_ovo_je_komentar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/natrag_tipka"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/povratak"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komentar_cijeli_tekst"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/obrisi_tipka"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/obrisi"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komentar_cijeli_tekst"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>