<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina_vise"
    tools:context=".DodajActivity">

    <TextView
        android:id="@+id/spremljeni_naziv"
        android:layout_width="358dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/dodavanje_ro_endana"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ime_i_prezime"
        android:layout_width="362dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="#0FFF0000"
        android:gravity="center"
        android:text="@string/ime_i_prezime"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/datum_tekst"
        android:layout_width="362dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="#0FFF0000"
        android:gravity="center"
        android:text="@string/datum_ro_enja"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ime_prezime_iza"
        android:layout_width="362dp"
        android:layout_height="62dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ime_i_prezime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ime_prezime_ispred"
            android:layout_width="362dp"
            android:layout_height="62dp"
            android:hint="@string/unesite_naziv_osobe" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>